# fastapi-celery

./: README.md  docker-compose.yml  pyproject.toml
app/: main.py
app/worker/: celery_app.py  celery_worker.py
